--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
     "name": "Raj Web App",
     "short_name": "Raj",
-    "start_url": "http://rajdeepsharma.tk/index.html",
+    "start_url": "https://vip-you.github.io/update/index.html",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#007bff",
     "icons": [
         {
-            "src": "http://rajdeepsharma.tk/icon-192x192.png",
+            "src": "https://vip-you.github.io/update/icon-192x192.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "http://rajdeepsharma.tk/icon-512x512.png",
+            "src": "https://vip-you.github.io/update/icon-512x512.png",
             "type": "image/png",
             "sizes": "512x512"
         }
