--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,12 @@
     "theme_color": "#007bff",
     "icons": [
         {
-            "src": "https://vip-you.github.io/update/icon-192x192.png",
+            "src": "https://vip-you.github.io/update/icon.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "https://vip-you.github.io/update/icon-512x512.png",
+            "src": "https://vip-you.github.io/update/icon.png",
             "type": "image/png",
             "sizes": "512x512"
         }
